syntax = "proto3";

package io.debezium.server.iceberg.rpc;

// The service definition.
service RecordIngestService {
  // Sends a string array and returns a simple response.
  rpc SendRecords(RecordIngestRequest) returns (RecordIngestResponse);
}

// The request message containing an array of strings.
message RecordIngestRequest {
  repeated string messages = 1;
}

// The response message with a confirmation string.
message RecordIngestResponse {
  string result = 1;
}
